--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout
+<android.support.v7.widget.GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/GridLayout1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:columnCount="3"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    app:columnCount="3"
+    app:rowCount="3">
 
-    <Button
+    <TextView
         android:id="@+id/button1"
-        android:layout_column="1"
-        android:layout_gravity="left|top"
-        android:layout_row="0"
-        android:text="Button1" />
+        android:text="Button1"
 
-    <Button
+        app:layout_column="1"
+        app:layout_gravity="left|top"
+        app:layout_row="0"
+        android:background="@color/colorPrimary"/>
+
+    <TextView
         android:id="@+id/button2"
-        android:layout_column="2"
-        android:layout_gravity="fill_vertical"
-        android:layout_row="0"
-        android:layout_rowSpan="2"
+        app:layout_column="2"
+        app:layout_gravity="fill_vertical"
+        app:layout_row="0"
         android:text="Button2" />
 
-    <Button
+    <TextView
         android:id="@+id/button3"
-        android:layout_column="0"
-        android:layout_gravity="left|top"
-        android:layout_row="0"
+        app:layout_column="0"
+        app:layout_gravity="left|top"
+        app:layout_row="0"
         android:text="Button3" />
 
-    <Button
+    <TextView
         android:id="@+id/button4"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="1"
+        app:layout_column="0"
+        app:layout_columnSpan="2"
+        app:layout_gravity="left"
+        app:layout_row="1"
         android:text="Button4" />
 
-</GridLayout>
+    <TextView />
+
+
+
+
+</android.support.v7.widget.GridLayout>
