--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.GridLayout
+<GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/GridLayout1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:columnCount="3"
     tools:context=".MainActivity"
-    app:columnCount="3"
-    app:rowCount="3">
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:background="@color/fondo"    >
+    <LinearLayout
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-    <TextView
-        android:id="@+id/button1"
-        android:text="Button1"
+        <TextView
+            android:id="@+id/uno"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
 
-        app:layout_column="1"
-        app:layout_gravity="left|top"
-        app:layout_row="0"
-        android:background="@color/colorPrimary"/>
+            android:background="@color/am"
+            android:layout_column="0"
+            android:layout_row="0"/>
 
-    <TextView
-        android:id="@+id/button2"
-        app:layout_column="2"
-        app:layout_gravity="fill_vertical"
-        app:layout_row="0"
-        android:text="Button2" />
+        <TextView
+            android:id="@+id/dos"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@color/az"
+            android:layout_column="0"
+            android:layout_row="1"/>
+        <TextView
+            android:id="@+id/tres"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="#b92b27"
+            android:layout_column="0"
+            android:layout_row="2"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-    <TextView
-        android:id="@+id/button3"
-        app:layout_column="0"
-        app:layout_gravity="left|top"
-        app:layout_row="0"
-        android:text="Button3" />
+        <TextView
+            android:id="@+id/cuatro"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@color/celeste"
+            android:layout_column="1"
+            android:layout_row="0"/>
+        <TextView
+            android:id="@+id/cinco"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@color/negro"
+            android:layout_column="1"
+            android:layout_row="1"/>
+        <TextView
+            android:id="@+id/seis"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@color/verde"
+            android:layout_column="1"
+            android:layout_row="2"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:padding="10dp">
+        <TextView
+            android:id="@+id/siete"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@color/rosado"
+            android:layout_column="2"
+            android:layout_row="0"/>
+        <TextView
+            android:id="@+id/ocho"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@color/vg"
+            android:layout_column="2"
+            android:layout_row="1"/>
+        <TextView
+            android:id="@+id/nueve"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@color/morado"
+            android:layout_column="2"
+            android:layout_row="2"/>
 
-    <TextView
-        android:id="@+id/button4"
-        app:layout_column="0"
-        app:layout_columnSpan="2"
-        app:layout_gravity="left"
-        app:layout_row="1"
-        android:text="Button4" />
 
-    <TextView />
+    </LinearLayout>
 
-
-
-
-</android.support.v7.widget.GridLayout>
+</GridLayout>
