--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,17 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="red">#ff0000</color>
+    <color name="azul">#0000FF</color>
+    <color name="celeste">#2EFEF7</color>
+    <color name="gris">#424242</color>
+    <color name="negro">#000</color>
+    <color name="rosado">#FF0040</color>
+    <color name="amarillo">#FFFF00</color>
+    <color name="verde">#00FF00</color>
+    <color name="morado">#8000FF</color>
+    <color name="fondo">#CFD8DC</color>
+    <color name="am">#c6ce00</color>
+    <color name="vg">#4d5645</color>
+    <color name="az">#0009ff</color>
 </resources>
